Add initial HTML structure for recipe app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Cocinamos, papá?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/46037018?v=4">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <div class="container">
+    <h1>¿Qué cocinamos hoy?</h1>
+
+    <div class="box">
+      <h2>Añadir nuevo plato</h2>
+      <input id="name" placeholder="Nombre del plato (ej: Aji de gallina)">
+      <input id="ingredients" placeholder="Ingredientes (separados por comas)">
+      <button id="addBtn">Añadir</button>
+    </div>
+
+    <div class="box">
+      <h2>Buscar plato</h2>
+      <input id="filter" placeholder="¿Qué ingredientes tienes? (opcional)">
+      <button id="suggestBtn">Sugerir plato</button>
+      <p id="result"></p>
+    </div>
+  </div>
+
+  <script type="module" src="app.js"></script>
+</body>
+</html>
 
