--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Cocinamos, papá?</title>
+  <title>Qué cocinar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="https://avatars.githubusercontent.com/u/46037018?v=4">
   <link rel="stylesheet" href="styles.css" />
@@ -10,21 +10,22 @@
 <body>
 
   <div class="container">
-    <h1>¿Qué cocinamos hoy?</h1>
+     <!-- PRIMERO: Buscar plato -->
+  <div class="box">
+    <h2>Buscar plato</h2>
+    <input id="filter" placeholder="¿Qué ingredientes tienes? (ej: pollo, papa)">
+    <button id="suggestBtn">Sugerir plato</button>
+    <p id="result"></p>
+  </div>
 
-    <div class="box">
-      <h2>Añadir nuevo plato</h2>
-      <input id="name" placeholder="Nombre del plato (ej: Aji de gallina)">
-      <input id="ingredients" placeholder="Ingredientes (separados por comas)">
-      <button id="addBtn">Añadir</button>
-    </div>
-
-    <div class="box">
-      <h2>Buscar plato</h2>
-      <input id="filter" placeholder="¿Qué ingredientes tienes? (opcional)">
-      <button id="suggestBtn">Sugerir plato</button>
-      <p id="result"></p>
-    </div>
+  <!-- DESPUÉS: Añadir nuevo plato -->
+  <div class="box">
+    <h2>Añadir nuevo plato</h2>
+    <input id="name" placeholder="Nombre del plato (ej: Aji de gallina)">
+    <input id="ingredients" placeholder="Ingredientes (separados por comas)">
+    <button id="addBtn">Añadir</button>
+  </div>
+    
   </div>
 
   <script type="module" src="app.js"></script>
