--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
 
   <div class="container">
+
+    <h1 style="
+    text-align:center;
+    font-size: 2.4rem;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    font-weight: 700;">
+    ¿Qué cocinamos mañana?
+    </h1>
+
      <!-- PRIMERO: Buscar plato -->
   <div class="box">
     <h2>Buscar plato</h2>
