Update input placeholders for better guidance

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <!-- PRIMERO: Buscar plato -->
   <div class="box">
     <h2>Buscar plato</h2>
-    <input id="filter" placeholder="¿Qué ingredientes tienes? (ej: pollo, papa)">
+    <input id="filter" placeholder="Click en 'Sugerir Plato' para plato al azar o escribir ingredientes">
     <button id="suggestBtn">Sugerir plato</button>
     <p id="result"></p>
   </div>
@@ -32,7 +32,7 @@
   <div class="box">
     <h2>Añadir nuevo plato</h2>
     <input id="name" placeholder="Nombre del plato (ej: Aji de gallina)">
-    <input id="ingredients" placeholder="Ingredientes (separados por comas)">
+    <input id="ingredients" placeholder="Ingredientes (Opcional y separados por comas 'pollo, papa')">
     <button id="addBtn">Añadir</button>
   </div>
     
