Update favorite button with toggle functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="result-title" id="resultTitle"></div>
         <div class="result-category" id="resultCategory"></div>
       </div>
-      <button class="fav-btn" id="favBtn" title="Añadir a favoritos">♡</button>
+      <button id="favBtn" onclick="toggleFavorite(lastSuggestedRecipe.name)">
+    ☆ Añadir a favoritos
+</button>
     </div>
 
     <p id="resultMessage" class="result-message"></p>
