--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="app.js?v=1"></script>
 </body>
 </html>
 
