--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="result-title" id="resultTitle"></div>
         <div class="result-category" id="resultCategory"></div>
       </div>
-      <button id="favBtn" onclick="toggleFavorite(lastSuggestedRecipe.name)">
+      <button class="fav-btn" id="favBtn" onclick="toggleFavorite(lastSuggestedRecipe.name)">
     ☆ Añadir a favoritos
 </button>
     </div>
