--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <button id="themeToggle" class="theme-toggle">🌙 Modo oscuro</button>
   <div class="container">
     <h1>¿Qué cocinamos mañana?</h1>
 
