--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <button id="themeToggle" class="theme-toggle">🌙 Modo oscuro</button>
   <div class="container">
     <h1>¿Qué cocinamos mañana?</h1>
+
+      <!-- Toggle de tema, debajo del título -->
+    <div class="theme-toggle-wrapper">
+      <button id="themeToggle" class="theme-toggle">🌙 Modo oscuro</button>
+    </div>
 
     <!-- BUSCAR PLATO -->
     <section class="box">
