--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
+  <!-- Favicon -->
+    <link rel="icon" type="image/png" href="zafra-chef.png" />
+  
   <title>¿Qué cocinamos mañana?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <h1>¿Qué cocinamos mañana?</h1>
+    <h1 class="title-with-icon-double">
+    <img src="zafra-chef.png" alt="chef" class="title-icon">
+    ¿Qué cocinamos mañana?
+    <img src="zafra-chef.png" alt="chef" class="title-icon">
+    </h1>
 
       <!-- Toggle de tema, debajo del título -->
     <div class="theme-toggle-wrapper">
