--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Favicon -->
-    <link rel="icon" type="image/png" href="zafra-chef.png" />
+    <link rel="icon" type="image/png" href="zafra_chef.png" />
   
   <title>¿Qué cocinamos mañana?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,9 +12,9 @@
 <body>
   <div class="container">
     <h1 class="title-with-icon-double">
-    <img src="zafra-chef.png" alt="chef" class="title-icon">
+    <img src="zafra_chef.png" alt="chef" class="title-icon">
     ¿Qué cocinamos mañana?
-    <img src="zafra-chef.png" alt="chef" class="title-icon">
+    <img src="zafra_chef.png" alt="chef" class="title-icon">
     </h1>
 
       <!-- Toggle de tema, debajo del título -->
