--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
         <button class="fav-btn" id="favBtn" title="Añadir a favoritos">♡</button>
       </div>
 
+      <!-- Bloque de IA -->
+<div class="ai-block" id="aiBlock" hidden>
+  <div class="ai-buttons">
+    <button type="button" id="aiTipsBtn" class="ai-btn">
+      💡 Tips de cocina (IA)
+    </button>
+    <button type="button" id="aiVideoBtn" class="ai-btn secondary">
+      🎬 Ver videos en YouTube
+    </button>
+  </div>
+  <div class="ai-output" id="aiOutput">
+    <!-- Aquí aparecerán los tips -->
+  </div>
+</div>
+
       <p id="resultMessage" class="result-message">
         Haz clic en "Sugerir plato" o escribe algunos ingredientes.
       </p>
