--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- ========================= -->
       <!--       BLOQUE DE IA       -->
       <!-- ========================= -->
-      <div id="aiBlock" class="box ai-box">
+      <div id="aiBlock" class="box ai-box" hidden>
         <h2>Ayuda con IA</h2>
 
         <p id="aiOutput" class="ai-output">
